# Neuchat

./: .travis.yml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
chatter/: settings.py  urls.py
chitchat/: asgi.py  settings.py  urls.py  wsgi.py
core/: consumers.py  forms.py  routing.py  urls.py  utils.py  views.py
neuchat/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css  chatroom.css  home.css  index.css
static/js/: chatroom.js
templates/: base.html  chatroom.html  home.html  index.html
