[tool.poetry]
name = "neuchat"
version = "0.1.0"
description = "A minimal anonymous chat app"
authors = ["Callista Chang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.6"
channels = "^2.4.0"
channels_redis = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
